components/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: app
          image: "linuxserver/radarr:amd64-4.4.4"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /config
            - name: videos
              mountPath: /videos
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: videos
          hostPath:
            path: /mnt/media
            type: Directory
